--- a/vignettes/spfilteR_vignette.Rmd
+++ b/vignettes/spfilteR_vignette.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 ## Introduction
 The `spfilteR` package provides tools to implement the eigenvector-based spatial filtering (ESF) approach put forth by @griffith2003 in linear and generalized linear regression models. It allows users to obtain eigenvectors from a transformed connectivity matrix and supports the supervised and unsupervised creation of a synthetic spatial filter. For the unsupervised approach, eigenvectors can be selected based on either i) the maximization of model fit, ii) the minimization of residual autocorrelation, iii) the statistical significance of residual autocorrelation, or iv) the significance level of candidate eigenvectors. Alternatively, all eigenvectors in the search set may be included so that no selection takes place. While the functions provide a high flexibility, only a minimum of code is required to implement the unsupervised ESF approach.
 
-This vignette solely focuses on the workflow to illustrate the functionality of the `spfilteR` package. For a discussion on the ESF methodology, interested readers may be referred to other sources, for example @griffith2019 or @tiefelsdorf2007.
+This vignette solely focuses on the workflow to illustrate the functionality of the `spfilteR` package. For a discussion on the ESF methodology, interested readers may be referred to other sources, e.g., @griffith2019 or @tiefelsdorf2007.
 
 ## Installation
 A stable release version of the `spfilteR` package is available on CRAN and the latest development version can be downloaded from [GitHub](https://github.com/sjuhl/spfilteR).
@@ -35,7 +35,7 @@ devtools::install_github("sjuhl/spfilteR")
 ```
 
 ## Getting Started
-Together with the main functions, the package also contains an artificial dataset (`fakedataset`) and a connectivity matrix (`W`) connecting the 100 cross-sections on a regular grid by using the rook criterion of adjacency. For illustrative purposes, the following examples work with the fake dataset.
+Together with the main functions, the package contains an artificial dataset (`fakedataset`) and a connectivity matrix (`W`) connecting the 100 cross-sections on a regular grid by using the rook criterion of adjacency. For illustrative purposes, the following examples utilize the fake dataset.
 
 ```{r message=FALSE, warning=FALSE}
 # load the package
@@ -53,7 +53,7 @@ head(fakedataset)
 Besides an `ID` variable, the dataset contains a binary `indicator` variable, two count variables, and four continuous variables.
 
 ### Identifying Spatial Autocorrelation
-In a first step, we can use the function `MI.vec()` to check for the presence of spatial autocorrelation in the continuous variables by means of Moran's *I* [see also @cliff1981; @cliff1972]. The function also allows users to define the alternative hypothesis in order to obtain *p*-values.
+In a first step, the function `MI.vec()` checks for the presence of spatial autocorrelation in the continuous variables by means of Moran's *I* [see also @cliff1981; @cliff1972]. The function further allows users to define the alternative hypothesis in order to obtain *p*-values.
 
 ```{r}
 # select continuous variables
@@ -95,7 +95,7 @@ summary(lm.esf,EV=TRUE)
 
 While the `print` method shows that 8 eigenvectors were selected from the candidate set consisting of 22 eigenvectors, the `summary` method provides additional information. Besides the ordinary least squares (OLS) parameter estimates, the output shows that the ESF model filters for positive spatial autocorrelation using the minimization of residual autocorrelation as objective function during the eigenvector search. A comparison between the filtered and the nonspatial OLS model with respect to model fit and residual autocorrelation is also provided. Since the option `EV` is set to `TRUE`, the `summary` method also displays information on the selected eigenvectors. As the results show, the ESF model successfully removes the spatial pattern from model residuals.
 
-The results can also be visualized easily by using the `plot` method. The plot displays the Moran coefficient associated with each of the eigenvectors. The shaded area signifies the candidate set and selected eigenvectors are illustrated by black dots.
+The `plot` method allows for an easy visualization of the results. The graph displays the Moran coefficient associated with each of the eigenvectors. The shaded area signifies the candidate set and selected eigenvectors are illustrated by black dots.
 
 ```{r fig_out, out.width = '50%', fig.align='center'}
 plot(lm.esf)
@@ -123,9 +123,9 @@ lmFilter(y=y,x=X,W=W,objfn='all',positive=TRUE,ideal.setsize=TRUE)
 If users wish to select eigenvectors based on individual selection criteria, they can obtain the eigenvectors using the function `getEVs()` and perform a supervised selection procedure using the basic [`stats::lm()`](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/lm) command.
 
 ### Extension to Generalized Linear Models
-The ESF approach outlined above easily extends to generalized linear models (GLMs) as well [see also @griffith2019]. Therefore, the `spfilteR` package contains the function `glmFilter()` which uses maximim likelihood estimation (MLE) to fit a spatially filtered GLM and performs an unsupervised eigenvector search based on alternative objective functions.
+The ESF approach outlined above easily extends to generalized linear models (GLMs) as well [see also @griffith2019]. Therefore, the `spfilteR` package contains the function `glmFilter()` which uses maximum likelihood estimation (MLE) to fit a spatially filtered GLM and performs an unsupervised eigenvector search based on alternative objective functions.
 
-Except for minor differences `glmFilter()` works similar to the `lmFilter()` function discussed above. The option `model` defines the model that needs to be estimated. Currently, unsupervised spatial filtering is possible for logit, probit, and poisson models. Moreover, the option `optim.method` specifies the optimization method used to maximize the log-likelihood function. Finally, the option `resid.type` allows users to define the type of residuals used to calculate Moran's *I* and `boot.MI` is an integer specifying the number of bootstrap permutations to obtain the variance of Moran's *I*.
+Except for minor differences, `glmFilter()` works similar to the `lmFilter()` function discussed above. The option `model` defines the model that needs to be estimated. Currently, unsupervised spatial filtering is possible for logit, probit, and poisson models. Moreover, the option `optim.method` specifies the optimization method used to maximize the log-likelihood function. Finally, `resid.type` allows users to define the type of residuals used to calculate Moran's *I* and `boot.MI` is an integer specifying the number of bootstrap permutations to obtain the variance of Moran's *I*.
 
 ```{r}
 # define outcome variables
@@ -148,6 +148,6 @@ y.count <- fakedataset$count
                           ,boot.MI=100))
 ```
 
-Again, if users wish to define individual selection criteria or fit a GLM currently not implemented in `glmFilter()`, they can obtain the eigenvectors using the `getEVs()` command and perform supervised eigenvector selection with the standard [```stats::glm()```](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/glm) function.
+Again, if users wish to define individual selection criteria or fit a GLM currently not implemented in `glmFilter()`, they can obtain the eigenvectors using the `getEVs()` command and perform supervised eigenvector selection using the standard [```stats::glm()```](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/glm) function.
 
 ## References
