--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -235,3 +235,14 @@ pages = {23-49},
 year = {2019},
 url = {https://doi.org/10.1111/gean.12156}
 }
+
+@article{dary2011,
+author = {Dray, St\'ephane},
+title = {A New Perspective about Moran's Coefficient: Spatial Autocorrelation as a Linear Regression Problem},
+journal = {Geographical Analysis},
+volume = {43},
+number = {2},
+pages = {127-141},
+url = {https://doi.org/10.1111/j.1538-4632.2011.00811.x},
+year = {2011}
+}
